--- a/chofer-sobrio/src/components/Toolbar/Toolbar.css
+++ b/chofer-sobrio/src/components/Toolbar/Toolbar.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: #521751;
+    background: black;
     height: 56px;
 
 }
@@ -37,6 +37,13 @@
 
 .toolbar_navigation-items li{
     padding: 0 0.5rem;
+}
+
+.toolbar_navigation-items Button{
+    padding: 0 0.5rem;
+    margin: 0.5rem;
+    background: none;
+    border-color: transparent;
 }
 
 .toolbar_navigation-items{
