Arreglando pequeñas cosas
Ayudando con los bugs de suyapa, arreglando como se mira el sidedrawer. Tambien arreglando unos errores que aparecian en consola

--- a/chofer-sobrio/src/components/SideDrawer/SideDrawer.css
+++ b/chofer-sobrio/src/components/SideDrawer/SideDrawer.css
@@ -21,7 +21,7 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: center
+    justify-content: initial
 }
 
 .side-drawer li{
