--- a/chofer-sobrio/src/components/Toolbar/Toolbar.css
+++ b/chofer-sobrio/src/components/Toolbar/Toolbar.css
@@ -40,14 +40,14 @@
 }
 
 .toolbar_navigation-items Button{
-    padding: 0 0.5rem;
-    margin: 0.5rem;
-    background: none;
-    border-color: transparent;
+    /* padding: 0 0.5rem;
+    margin: 0.5rem; */
+    /* background: yellow; */
+    /* border-color: transparent; */
 }
 
 .toolbar_navigation-items{
-    color:white;
+    color:black;
     text-decoration: none;
 }
 
