--- a/chofer-sobrio/src/components/Toolbar/Toolbar.css
+++ b/chofer-sobrio/src/components/Toolbar/Toolbar.css
@@ -40,6 +40,15 @@
     padding: 0 0.5rem;
 }
 
+.navbar {
+    display: flex;
+    flex-direction: row;
+}
+ .navbar-item {
+     margin: 0 1em;
+     background-color: #FFF017;
+ }
+
 .toolbar_navigation-items Button{
     /* padding: 0 0.5rem;
     margin: 0.5rem; */
