--- a/chofer-sobrio/src/components/Toolbar/Toolbar.css
+++ b/chofer-sobrio/src/components/Toolbar/Toolbar.css
@@ -50,21 +50,39 @@
  }
 
 .toolbar_navigation-items Button{
-    /* padding: 0 0.5rem;
-    margin: 0.5rem; */
-    /* background: yellow; */
-    /* border-color: transparent; */
+    color: black;
+    margin: 0.5rem; 
+    background: yellow; 
+    border-color: transparent;
 }
 
 .toolbar_navigation-items{
-    color:black;
-    text-decoration: none;
 }
 
-.toolbar_navigation-items a:hover,
-.toolbar_navigation-items a:active{
-    color: orange;
+.dropdown_menu{
+    text-align: center;
+    background: rgba(255, 255, 255, 0.8);
+    border: rgba(255, 255, 255, 0.8);
 }
+
+.toolbar_navigation-items Button:hover{
+    background: yellow;
+    border-color: transparent; 
+    color: black;
+}
+
+.toolbar_navigation-items Button:focus{
+    background: yellow;
+    border-color: transparent; 
+    color: black;
+}
+
+.toolbar_navigation-items Button:active{
+    background: yellow;
+    border-color: transparent; 
+    color: black;
+}
+
 
 @media (max-width: 768px){
     .toolbar_navigation-items{
