arregle el error de iniciar sesion y el boton de cerrar sesion

--- a/chofer-sobrio/src/components/IniciarSesion/IniciarSesion.css
+++ b/chofer-sobrio/src/components/IniciarSesion/IniciarSesion.css
@@ -5,4 +5,10 @@
     margin: auto;
     height: 100%;
   }
+
+  #btn-color-picker{
+    background: yellow;
+    border-color: transparent; 
+    color: black;
+  }
   
