--- a/chofer-sobrio/src/components/IniciarSesion/IniciarSesion.css
+++ b/chofer-sobrio/src/components/IniciarSesion/IniciarSesion.css
@@ -11,4 +11,11 @@
     border-color: transparent; 
     color: black;
   }
+
+  .jumbo-boy{
+    background:yellow;
+    border: 1px;
+    outline-width: thin; 
+    border-radius: 20px; 
+}
   
