--- a/chofer-sobrio/src/components/PedirChofer/PedirChofer.css
+++ b/chofer-sobrio/src/components/PedirChofer/PedirChofer.css
@@ -11,3 +11,10 @@ body {
     background-color: yellow;
 }
 
+.jumbo-boy{
+    background:yellow;
+    border: 1px;
+    outline-width: thin; 
+    border-radius: 20px; 
+    text-align: center;
+}
