--- a/chofer-sobrio/src/components/SideDrawer/SideDrawer.css
+++ b/chofer-sobrio/src/components/SideDrawer/SideDrawer.css
@@ -1,56 +1,59 @@
-.side-drawer{
+.side-drawer {
     height: 100%;
     background: white;
-    box-shadow: 1px 0px 3px rgba(0,0,0,0.5);
+    box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     left: 0;
     width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-y: auto;
     max-width: 400px;
     z-index: 200;
     transform: translateX(-100%);
     transition: transform 0.3s ease-out;
 }
 
-.side-drawer.open{
+.side-drawer.open {
     transform: translateX(0);
 }
 
-.side-drawer ul{
+.side-drawer ul {
     height: 100%;
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: initial
+    justify-content: initial;
 }
 
-.side-drawer li{
+.side-drawer li {
     margin: 0.5rem 0;
 }
 
-.side-drawer Link{
+.side-drawer Link {
     margin: 0.5rem 0;
 }
 
-.side-drawer Button{
+.side-drawer Button {
     color: black;
     margin: 0.5rem 0;
     background: none;
     border-color: transparent;
 }
 
-.side-drawer a{
+.side-drawer a {
     color: #521751;
     text-decoration: none;
     font-size: 1.2rem;
 }
 
-.side-drawer a:hover,
-.side-drawer a:active{
+.side-drawer a:hover, .side-drawer a:active {
     color: orange;
 }
-@media (min-width: 769px){
-    .side-drawer{
+
+@media (min-width: 769px) {
+    .side-drawer {
         display: none;
     }
 }
