--- a/chofer-sobrio/src/components/Toolbar/Toolbar.css
+++ b/chofer-sobrio/src/components/Toolbar/Toolbar.css
@@ -1,4 +1,4 @@
-.toolbar{
+.toolbar {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,37 +6,37 @@
     background: black;
     height: 56px;
     z-index: 1;
-
 }
-.toolbar__navigation{
+
+.toolbar__navigation {
     display: flex;
     height: 100%;
     align-items: center;
     padding: 0 1rem;
 }
 
-.toolbar__logo{
+.toolbar__logo {
     margin-left: 1rem;
 }
 
-.toolbar__logo a{
+.toolbar__logo a {
     color: white;
     text-decoration: none;
     font-size: 1.5rem;
 }
 
-.spacer{
+.spacer {
     flex: 1;
 }
 
-.toolbar_navigation-items ul{
+.toolbar_navigation-items ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
 }
 
-.toolbar_navigation-items li{
+.toolbar_navigation-items li {
     padding: 0 0.5rem;
 }
 
@@ -44,57 +44,62 @@
     display: flex;
     flex-direction: row;
 }
- .navbar-item {
-     margin: 0 1em;
-     background-color: #FFF017;
- }
 
-.toolbar_navigation-items Button{
+.navbar-item {
+    margin: 0 1em;
+    background-color: #FFF017;
+}
+
+.toolbar_navigation-items Button {
     color: black;
-    margin: 0.5rem; 
-    background: yellow; 
+    margin: 0.5rem;
+    background: yellow;
     border-color: transparent;
 }
 
-.toolbar_navigation-items{
-}
+.toolbar_navigation-items {}
 
-.dropdown_menu{
+.dropdown_menu {
     text-align: center;
     background: rgba(255, 255, 255, 0.8);
     border: rgba(255, 255, 255, 0.8);
 }
 
-.toolbar_navigation-items Button:hover{
+.toolbar_navigation-items Button:hover {
     background: yellow;
-    border-color: transparent; 
+    border-color: transparent;
     color: black;
 }
 
-.toolbar_navigation-items Button:focus{
+.toolbar_navigation-items Button:focus {
     background: yellow;
-    border-color: transparent; 
+    border-color: transparent;
     color: black;
 }
 
-.toolbar_navigation-items Button:active{
+.toolbar_navigation-items Button:active {
     background: yellow;
-    border-color: transparent; 
+    border-color: transparent;
     color: black;
 }
 
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
 
-@media (max-width: 768px){
-    .toolbar_navigation-items{
+@media (max-width: 768px) {
+    .toolbar_navigation-items {
         display: none;
     }
 }
 
-@media(min-width: 769px){
-    .toolbar__toggle-button{
+@media(min-width: 769px) {
+    .toolbar__toggle-button {
         display: none;
     }
-    .toolbar__logo{
+    .toolbar__logo {
         margin-left: 0;
     }
 }
