--- a/chofer-sobrio/src/components/Home/Home.css
+++ b/chofer-sobrio/src/components/Home/Home.css
@@ -40,8 +40,8 @@
 }
 
 .outer-div {
-    height: 350px;
-    width: 60vw;
+    height: 330px;
+    width: 82.5%;
     position: absolute;
     display: inline-block;
     text-align: center;
