--- a/chofer-sobrio/src/components/historial_pedidos_cliente/historial_pedidos_cliente.css
+++ b/chofer-sobrio/src/components/historial_pedidos_cliente/historial_pedidos_cliente.css
@@ -13,3 +13,15 @@
     margin: 10px;
     
 }
+.divForm{
+   padding: 4px;
+   margin: 4px;
+   border: 3px;
+   outline-width: thin; 
+   border-radius: 5px;
+   background-color:white; 
+}
+.titulo{
+    margin-left: 35%
+    
+}
